--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <!-- header start -->
 
 {% if site.float_logo %}
-  <a href="{{ site.url }}" class="logo-readium"><span class="logo" style="background-image: url({{ site.logo }})"></span></a>
+  <a href="{{ site.baseurl | prepend: site.url }}" class="logo-readium"><span class="logo" style="background-image: url({{ site.logo | prepend: site.baseurl }})"></span></a>
 {% endif %}
 <!-- header end -->
