--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -102,7 +102,7 @@
       <div class="inner">
         <h1 class="blog-title">{{ site.title }}</h1>
         <h2 class="blog-description">{{ site.description }}</h2>
-        <a href={{ "/" | prepend: site.baseurl }} class="btn">Tillbaks till startsidan</a>
+        <a href={{ "/" | prepend: site.baseurl }} class="btn">Tillbaka till startsidan</a>
       </div>
     </div>
     {% include javascripts.html %}
